[tool.poetry]
name = "celi-framework"
version = "0.0.0"
description = "Controller-Embedded Language Interactions - facilitates the entire lifecycle of document processing, from pre-processing and embedding to post-monitoring and quality assessment."
authors = ["Jan-Samuel Wagner <jwab@genmab.com>","Dave DeCaprio <daved@alum.mit.edu>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/x3n0cr4735/celi"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
include = ["celi_framework/utils/seed_llm_cache.db", "celi_framework/examples/wikipedia/example_config.json"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = ">=1.0.0"
python-levenshtein = ">=0.25.1"
aiosqlite = ">=0.20.0"
anthropic = {extras = ["bedrock"], version = "^0.34.2"}
numpy = ">=1.22.4"
openai = ">=1.16.0"
pandas = ">=2.0.3"
pydantic = ">=2.0.1"
requests = ">=2.26.0"
llama-index = { version = ">=0.10.23", optional = true }
llama-index-vector-stores-chroma = { version = ">=0.1.6", optional = true }
py-llm-core = { version = ">=2.8.2", optional = true }
opentelemetry-proto = { version = ">=1.24.0", optional = true }
pymongo = { version = ">=4.6.2", optional = true }
bert-score = { version = ">=0.3.13", optional = true }
evaluate = { version = ">=0.4.1", optional = true }
requests-cache = { version = ">=1.2.0", optional = true }
scikit-learn = { version = ">=1.4.2", optional = true }
pymupdf = { version = ">=1.24.1", optional = true }
python-docx = { version = ">=1.1.0", optional = true }
aioboto3 = "^13.1.1"

[tool.poetry.extras]
experimental = ["py-llm-core", "opentelemetry-proto", "pymongo", "bert-score", "evaluate", "requests-cache", "scikit-learn", "pymupdf", "python-docx"]
wikipedia = ["llama-index", "llama-index-vector-stores-chroma"]

[tool.poetry.group.test.dependencies]
pytest = ">=7.4.4"
pytest-asyncio = ">=0.23.3"

[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.29.3"
jupyter = ">=1.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
myst-parser = "^2.0.0"
furo = "^2023.9.10"
sphinxext-opengraph = "^0.9.1"
sphinx-copybutton = "^0.5.2"
sphinx-autobuild = "^2021.3.14"
protobuf = ">=4.21.6" # Added to address build issues with readthedocs.
cffi = ">=1.10.0" # Added to address build issues with readthedocs. pyo3_runtime.PanicException: Python API call failed
sphinx-autodoc-typehints = "^2.0.0"

[tool.pytest.ini_options]
log_level="DEBUG"
log_cli=true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
